Fixed spacing when hiding sidebars

--- a/src/assets/stylesheets/main/layout/_content.scss
+++ b/src/assets/stylesheets/main/layout/_content.scss
@@ -38,7 +38,7 @@
     @include break-from-device(screen) {
 
       // Navigation is visible
-      .md-sidebar--primary:not([hidden]) ~ & {
+      .md-sidebar--primary:not([hidden]) ~ .md-content & {
         margin-left: px2rem(24px);
 
         // Adjust for right-to-left languages
@@ -49,7 +49,7 @@
       }
 
       // Table of contents is visible
-      .md-sidebar--secondary:not([hidden]) ~ & {
+      .md-sidebar--secondary:not([hidden]) ~ .md-content & {
         margin-right: px2rem(24px);
 
         // Adjust for right-to-left languages
